It works! Successfully linked TDAHelper, SFML, and the game demos.

--- a/Game2/CMakeLists.txt
+++ b/Game2/CMakeLists.txt
@@ -9,10 +9,11 @@ set(ENV{PATH} mingw32/bin/)             # Location of C++ compiler
 include_directories(. ../SFML/include ../)
 
 # Include SFML
-find_package(SFML COMPONENTS graphics window audio system network REQUIRED)
+find_package(SFML COMPONENTS audio network graphics window system REQUIRED)
 
 # Add the Engine library
-add_library(TDAHelper SHARED ../TDAHelper/library.hpp ../TDAHelper/library.cpp)
+add_library(TDAHelper SHARED ../TDAHelper/library.cpp)
+target_link_libraries(TDAHelper sfml-audio sfml-network sfml-graphics sfml-window sfml-system)
 
 add_executable(Game2 main.cpp Game.cpp Game.h)
-target_link_libraries(Game2 sfml-graphics sfml-window sfml-audio sfml-system sfml-network -static-libstdc++ TDAHelper)
+target_link_libraries(Game2 TDAHelper)
