--- a/TDAHelper/CMakeLists.txt
+++ b/TDAHelper/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SFML_DIR ../SFML/lib/cmake/SFML)    # Location of SFML (local to project)
 set(ENV{PATH} mingw32/bin/)             # Location of C++ compiler
 
 include_directories(. ../SFML/include)
-find_package(SFML COMPONENTS graphics window audio system network REQUIRED)
+find_package(SFML COMPONENTS audio network graphics window system REQUIRED)
 
 add_library(TDAHelper SHARED library.hpp library.cpp)
-target_link_libraries(TDAHelper sfml-graphics sfml-window sfml-audio sfml-system sfml-network -static-libstdc++)
+target_link_libraries(TDAHelper sfml-audio sfml-network sfml-graphics sfml-window sfml-system -static-libstdc++)
