Cleaned up Game2 to use the td::Player directly, started Doxygen documentation in the TDAHelper engine.

--- a/Game2/CMakeLists.txt
+++ b/Game2/CMakeLists.txt
@@ -15,5 +15,5 @@ find_package(SFML COMPONENTS audio network graphics window system REQUIRED)
 add_library(TDAHelper SHARED ../TDAHelper/library.cpp)
 target_link_libraries(TDAHelper sfml-audio sfml-network sfml-graphics sfml-window sfml-system)
 
-add_executable(Game2 main.cpp Game.cpp Game.h Player.cpp Player.h Maps.cpp Maps.h)
+add_executable(Game2 main.cpp Game.cpp Game.h Maps.cpp Maps.h)
 target_link_libraries(Game2 TDAHelper)
