--- a/Game1/CMakeLists.txt
+++ b/Game1/CMakeLists.txt
@@ -15,5 +15,5 @@ find_package(SFML COMPONENTS audio network graphics window system REQUIRED)
 add_library(TDAHelper SHARED ../TDAHelper/library.cpp)
 target_link_libraries(TDAHelper sfml-audio sfml-network sfml-graphics sfml-window sfml-system)
 
-add_executable(Game1 main.cpp main.h game.cpp game.h map.cpp map.h player.cpp player.h)
+add_executable(Game1 main.cpp game.cpp game.h map.cpp map.h player.cpp player.h)
 target_link_libraries(Game1 TDAHelper)
