--- a/Game1/CMakeLists.txt
+++ b/Game1/CMakeLists.txt
@@ -16,4 +16,4 @@ add_library(TDAHelper SHARED ../TDAHelper/library.cpp)
 target_link_libraries(TDAHelper sfml-audio sfml-network sfml-graphics sfml-window sfml-system)
 
 add_executable(Game1 main.cpp game.cpp game.h map.cpp map.h player.cpp player.h)
-target_link_libraries(Game1 TDAHelper)
+target_link_libraries(Game1 TDAHelper -static-libstdc++)
